support for rhel9 and arm

--- a/templates/kernel-custom.conf.j2
+++ b/templates/kernel-custom.conf.j2
@@ -22,6 +22,6 @@ net.core.somaxconn=1024
 fs.file-max = 6815744
 kernel.pid_max=4194303
 net.core.somaxconn = 16384
-net.ipv4.tcp_fin_timeout = 30
-net.ipv4.tcp_tw_recycle = 1
-net.ipv4.tcp_tw_reuse = 1
+#net.ipv4.tcp_fin_timeout = 30
+#net.ipv4.tcp_tw_recycle = 1
+#net.ipv4.tcp_tw_reuse = 1
